--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">FinalProject</string>
+
+    <string name="genders">
+        <item>Please select gender</item>
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string>
+
+    <string-array name="bloodType">
+        <item>Please select blood type</item>
+        <item>A-</item>
+        <item>A+</item>
+        <item>B-</item>
+        <item>B+</item>
+        <item>AB-</item>
+        <item>AB+</item>
+        <item>O-</item>
+        <item>O+</item>
+    </string-array>
+
+
 </resources>
