--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">FinalProject</string>
 
-    <string name="genders">
+    <string-array name="genders">
         <item>Please select gender</item>
         <item>Male</item>
         <item>Female</item>
         <item>Other</item>
-    </string>
+    </string-array>
 
     <string-array name="bloodType">
         <item>Please select blood type</item>
